style.css
/* ... */
.colour-box-2 {
  width: 100%;
  height: 0;
  padding-top: 100%;
  display: flex;
  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
}

.colour-box-3 {
  width: 100%;
  height: 0;
  padding-top: 100%;
  display: flex;
  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
}

.colour-box-container {
  display: flex;
  justify-content: space-around;
  align-items: center;
  padding-top: 3rem;
  padding-bottom: 1rem;
  padding-left: 1.2rem;
  padding-right: 1.2rem;
  border-top: gray dotted 2px;
}

.big-button-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-bottom: 2rem;
}

.big-button {
  align-self: center;
  font-size: 20px;
  width: 100%;
  height: 100px;
}

.top-half-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-top: 2rem;
}

.button-description {
  padding-top: 1rem;
  text-align: center;
  padding-left: 2rem;
  padding-right: 2rem;
}

/*---------- start of quotes section css ----------*/

/*------ dummy webpage display window ------*/
/* The browser window */
.quotesContainer {
  border: 3px solid #f1f1f1;
  border-radius: 8px;
  width: 75%;
  margin: auto;
  margin-bottom: 48px;
  -webkit-border-radius: 8px;
  -moz-border-radius: 8px;
  -ms-border-radius: 8px;
  -o-border-radius: 8px;
}

/* Container for columns and the top "toolbar" */
.row {
  padding: 10px;
  background: #f1f1f1;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

/* Create three unequal columns that floats next to each other */
.column {
  float: left;
}

.left {
  width: 15%;
}

.right {
  width: 10%;
}

.middle {
  width: 75%;
}

/* Clear floats after the columns */
.row:after {
  content: "";
  display: table;
  clear: both;
}

/* Three dots */
.dot {
  margin-top: 4px;
  height: 12px;
  width: 12px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
}

/* Style the input field */
input[type=text] {
  width: 100%;
  border-radius: 3px;
  border: none;
  background-color: white;
  margin-top: -8px;
  height: 25px;
  color: #666;
  padding: 5px;
}

/* Three bars (hamburger menu) */
.bar {
  width: 17px;
  height: 3px;
  background-color: #aaa;
  margin: 3px 0;
  display: block;
}

/* Page content */
.content {
  /* padding: 10px; */
}

/*------ start of quotes content ------*/

/* dummy content */
.quotes {
  display: flex;
  flex-direction: column;
}

/* dummy navbar */
.quotesNavbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 16px;
  background-color: var(--colour2);
}

/* dummy navbar image */
.quotesNavbar img {
  margin-left: 48px;
  background-color: white;
  border-radius: 24px;
  -webkit-border-radius: 24px;
  -moz-border-radius: 24px;
  -ms-border-radius: 24px;
  -o-border-radius: 24px;
}

button {
  padding: 12px 24px;
  margin-right: 48px;
  background-color: var(--colour3);
  color: white;
  font-size: 30px;
  border: none;
  border-radius: 50px;
  -webkit-border-radius: 50px;
  -moz-border-radius: 50px;
  -ms-border-radius: 50px;
  -o-border-radius: 50px;
  font-family: 'Ubuntu Mono', monospace;
}

button:hover {
  border: 2px solid var(--colour3);
  background: linear-gradient(to right, #6666ff, #0099ff , #00ff00, #ff3399, #6666ff);
  -webkit-background-clip: text;
  background-clip: text;
  color: transparent;
  animation: rainbow_animation 6s ease-in-out infinite;
  background-size: 400% 100%;
}

/* quotes hero section */
.heroContainer {
  display: flex;
  justify-content: center;
  padding: 48px 0;
  background-color: var(--colour1);
}

/* quotes hero column */
.quotesHero {
  display: flex;
  justify-content: center;
  background-color: var(--colour1);
  color: var(--colour3);
  width: 75%;
  margin: auto;
}

/* quotes hero image */
.quotesHeroImage {
  display: flex;
  width: 50%;
  height: 100%;
  margin: auto;
  border-radius: 24px;
  -webkit-border-radius: 24px;
  -moz-border-radius: 24px;
  -ms-border-radius: 24px;
  -o-border-radius: 24px;
}

/* quotes hero text section */
.quotesHeroText {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 24px;
  width: 50%;
  margin: auto;
}

.quotesHeroText h1 {
  font-size: 48px;
  padding-left: 12px;
}

/* styling for hero quote */
.quotesHeroText blockquote{
  font-size: 30px;
  background: #f9f9f910;
  border-left: 10px solid lightgrey;
  margin: .5em 10px;
  padding: 0 10px;
  quotes: "\201C""\201D""\2018""\2019";
  padding: 10px 20px;
  line-height: 1.4;
}

.quotesHeroText blockquote:before {
  content: open-quote;
  display: inline;
  height: 0;
  line-height: 0;
  left: -10px;
  position: relative;
  top: 30px;
  color: #ccc;
  font-size: 3em;
}

.quotesHeroText footer{
  margin: 0;
  text-align: right;
  font-size: 1em;
  font-style: italic;
}

.quotesHeroText p {
  margin: 0;
  font-size: 24px;
  /* padding-left: 24px; */
  font-style: italic;
}

.panelContainer {
  display: flex;
  padding: 48px 0;
  background-color: lightgrey;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

/* quote cards section */
.quotesPanel {
  display: flex;
  justify-content: center;
  width: 90%;
  margin: auto;
}

/* individual quote card */
.quotesCard {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  padding: 16px;
  width: 22%;
  margin: 0 auto;
  background-color: var(--colour1);
  box-shadow: 0 2px 8px 0 var(--colour2);
  border-radius: 24px;
  -webkit-border-radius: 24px;
  -moz-border-radius: 24px;
  -ms-border-radius: 24px;
  -o-border-radius: 24px;
}
/* ... */

